2002-02-13  James Henstridge  <james@daa.com.au>

	* moduleinfo.py (head): add tasks gnome-libs, gnome-core and
	desktop (if anyone else has good ideas for tasks, please suggest
	them).

	* module.py (Task): simple class for mapping a single name to a
	list of modules to build.
	(ModuleSet.__expand_mod_list): function for expanding a list of
	strings to a list of Module instances.  Takes task objects into
	account.
	(ModuleSet.get_module_list): use __expand_mod_list() to expand
	module lists, so we get task support.

2002-02-13  Xavier Ordoquy <MCArkan@gael.sourceforge.net>

	* moduleinfo.py: changed gnome-core to
	gnome-desktop/panel/session.

2002-02-12  James Henstridge  <james@daa.com.au>

	* moduleinfo.py: add glade (glade-gnome2-branch).

2002-02-05  Gediminas Paulauskas <menesis@delfi.lt>

	*  moduleinfo.py (head): add gnome-media, bug-buddy, gnome-games;
	remove libcapplet; fix gal

2002-02-01  Havoc Pennington  <hp@pobox.com>

	* Makefile (bindir): use a "bindir" variable so "make install
	bindir=/foo" works

	* jhbuild.py (do_build): if passing extra args to build mode, 
	take them as a list of modules to build

	* moduleinfo.py (head): make metacity depend on gconf

Thu Jan 24 13:12:08 2002  Jonathan Blandford  <jrb@redhat.com>

	* moduleinfo.py (head): add libgnomeprint, libgnomeprintui, and gedit

Sat Jan 19 20:31:16 2002  Owen Taylor  <otaylor@redhat.com>

	* moduleinfo.py (head): Add gtk-engines.

Thu Jan 17 15:07:15 2002  Jonathan Blandford  <jrb@redhat.com>

	* moduleinfo.py (head): add profterm and gdm2

2002-01-16  James Henstridge  <james@daa.com.au>

	* moduleinfo.py (head): add orbit-python info.

	* jhbuild.py (do_build): expand the skip list to include dependent
	modules.  So --skip=libgnomeui will skip glib, gtk+, libgnome,
	etc.  Now it is actually useful.

2002-01-14  Alex Graveley  <alex@ximian.com>

	* bootstrap.py (bootstraps): Add python bootstrap for 2.x.
	(Bootstrap.build): Allow tarballs to end in tgz, 