@@ -3,6 +3,7 @@
 	* moduleinfo.py (head): add tasks gnome-libs, gnome-core and
 	desktop (if anyone else has good ideas for tasks, please suggest
 	them).
+	(head): fix up deps for the split up gnome-core.
 
 	* module.py (Task): simple class for mapping a single name to a
 	list of modules to build.
